--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "description": "Paint Shop Pro Palette file reader/writer",
   "version": "0.1.4",
   "license": "MIT",
-  "bugs": "https://github.com/goto-bus-stop/jascpal",
-  "author": "goto-bus-stop <rene@kooi.me>",
+  "bugs": "https://github.com/genie-js/jascpal",
+  "author": "Renée Kooi <renee@kooi.me>",
   "files": [
     "/index.js"
   ],
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/goto-bus-stop/jascpal.git"
+    "url": "http://github.com/genie-js/jascpal.git"
   },
   "dependencies": {
     "simple-assign": "^0.1.0"
